Add device service core apis, correct docker-compose and swagger
